fixed header top gap

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,7 +30,9 @@ header {
     position: fixed;
     z-index: 100;
     width: 100%;
-    background-color:rgb(243, 242, 234)
+    background-color:rgb(243, 242, 234);
+    top: 0;
+    
      
 }
 
